welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int, versLAvant: Boolean) : Double = {
	if (versLAvant==true) {
		for (x <- 1 to nbPas) {
			avance()
		}
	} else {
		for (x <- 1 to nbPas) {
			recule()
		}
	}
	return versLAvant ;
}
